- Auto start connection when app started - Update to support reused connection - Add mongoose debug event - Add comment

--- a/config
+++ b/config
@@ -11,3 +11,4 @@ mail_address_copy               :
 
 // MongoDB settings
 mongodb_url                     : mongodb://127.0.0.1:27017/app
+mongodb_debug_event             : true
